fix faction carry over and allow custon build name

--- a/src/client/wf_dmg_calc.html
+++ b/src/client/wf_dmg_calc.html
@@ -17,7 +17,7 @@
             <!-- Build 1 (Default) -->
             <div class="build" data-build-id="1">
                 <div class="build-header">
-                    <div class="build-title">Build 1</div>
+                    <input type="text" class="build-title" value="Build 1" placeholder="Build name...">
                     <button class="remove-build-btn">✕</button>
                 </div>
                 <div class="main-grid">
