Add icons to element dropdown

--- a/src/client/wf_dmg_calc.html
+++ b/src/client/wf_dmg_calc.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Warframe Damage Calculator</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="element-dropdown-styles.css">
 </head>
 <body>
     <div class="container">
@@ -131,5 +132,6 @@
         </div>
     </div>
     <script src="script.js"></script>
+    <script src="element-icons-addon.js"></script>
 </body>
 </html>
