--- a/src/client/wf_dmg_calc.html
+++ b/src/client/wf_dmg_calc.html
@@ -27,6 +27,16 @@
                 <div class="section-title">1. Weapon Data</div>
                 <div class="input-grid">
                     <div class="input-group">
+                        <label>Weapon Type</label>
+                        <select class="weapon-type-select">
+                            <option value="rifle">Rifle</option>
+                        </select>
+                    </div>
+                    <div class="input-group">
+                        <label>Disposition</label>
+                        <input type="number" class="weapon-disposition-input" value="1.0" step="0.01" min="0.5" max="1.55">
+                    </div>
+                    <div class="input-group">
                         <label>Base Damage</label>
                         <input type="number" class="base-damage-input" value="100">
                     </div>
